AX: AccessibilityNodeObject::childrenChanged() generates too many AXLiveRegionChanged notifications https://bugs.webkit.org/show_bug.cgi?id=147211 <rdar://problem/19908029>

Patch by Nan Wang <n_wang@apple.com> on 2015-07-23
Reviewed by Chris Fleizach.

Source/WebCore:

AccessibilityNodeObject::childrenChanged() can be called repeatedly, generating a live region
change notification each time. Sometimes, so many happen that VoiceOver hangs. We can use a timer
to make sure that we coalesce these notifications.

Test: platform/mac/accessibility/aria-multiple-liveregions-notification.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXComputedObjectAttributeCache::getIgnored):
(WebCore::AXObjectCache::AXObjectCache):
(WebCore::AXObjectCache::~AXObjectCache):
(WebCore::AXObjectCache::frameLoadingEventNotification):
(WebCore::AXObjectCache::postLiveRegionChangeNotification):
(WebCore::AXObjectCache::liveRegionChangedNotificationPostTimerFired):
(WebCore::AXObjectCache::handleScrollbarUpdate):
* accessibility/AXObjectCache.h:
* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::childrenChanged):

LayoutTests:

* platform/mac/accessibility/aria-liveregions-notifications-always-sent-expected.txt:
* platform/mac/accessibility/aria-liveregions-notifications-always-sent.html:
* platform/mac/accessibility/aria-liveregions-notifications-expected.txt:
* platform/mac/accessibility/aria-liveregions-notifications.html:
* platform/mac/accessibility/aria-multiple-liveregions-notification-expected.txt: Added.
* platform/mac/accessibility/aria-multiple-liveregions-notification.html: Added.

Canonical link: https://commits.webkit.org/165327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187278 268f45cc-cd09-0410-ab3c-d52691b4dbfc